@@ -37,8 +37,8 @@ import java.io.ByteArrayInputStream;
 import java.io.Writer;
 import java.text.MessageFormat;
 import java.util.ArrayList;
-import java.util.Enumeration;
 import java.util.HashSet;
+import java.util.Iterator;
 import java.util.List;
 import java.util.Set;
 import thredds.client.catalog.Access;
@@ -66,7 +66,7 @@ public class EDDGridFromDap extends EDDGrid {
    * Indicates if data can be transmitted in a compressed form. It is unlikely anyone would want to
    * change this.
    */
-  public static boolean acceptDeflate = true;
+  public static final boolean acceptDeflate = true;
 
   /**
    * This constructs an EDDGridFromDap based on the information in an .xml file.
@@ -116,44 +116,41 @@ public class EDDGridFromDap extends EDDGrid {
       // String2.log(">>  localTags=" + localTags + content);
 
       // try to make the tag names as consistent, descriptive and readable as possible
-      if (localTags.equals("<addAttributes>")) tGlobalAttributes = getAttributesFromXml(xmlReader);
-      else if (localTags.equals("<altitudeMetersPerSourceUnit>"))
-        throw new SimpleException(EDVAlt.stopUsingAltitudeMetersPerSourceUnit);
-      else if (localTags.equals("<axisVariable>"))
-        tAxisVariables.add(getSDAVVariableFromXml(xmlReader));
-      else if (localTags.equals("<dataVariable>"))
-        tDataVariables.add(getSDADVariableFromXml(xmlReader));
-      else if (localTags.equals("<accessibleTo>")) {
-      } else if (localTags.equals("</accessibleTo>")) tAccessibleTo = content;
-      else if (localTags.equals("<graphsAccessibleTo>")) {
-      } else if (localTags.equals("</graphsAccessibleTo>")) tGraphsAccessibleTo = content;
-      else if (localTags.equals("<accessibleViaWMS>")) {
-      } else if (localTags.equals("</accessibleViaWMS>"))
-        tAccessibleViaWMS = String2.parseBoolean(content);
-      else if (localTags.equals("<reloadEveryNMinutes>")) {
-      } else if (localTags.equals("</reloadEveryNMinutes>"))
-        tReloadEveryNMinutes = String2.parseInt(content);
-      else if (localTags.equals("<updateEveryNMillis>")) {
-      } else if (localTags.equals("</updateEveryNMillis>"))
-        tUpdateEveryNMillis = String2.parseInt(content);
-      else if (localTags.equals("<sourceUrl>")) {
-      } else if (localTags.equals("</sourceUrl>")) tLocalSourceUrl = content;
-      else if (localTags.equals("<onChange>")) {
-      } else if (localTags.equals("</onChange>")) tOnChange.add(content);
-      else if (localTags.equals("<fgdcFile>")) {
-      } else if (localTags.equals("</fgdcFile>")) tFgdcFile = content;
-      else if (localTags.equals("<iso19115File>")) {
-      } else if (localTags.equals("</iso19115File>")) tIso19115File = content;
-      else if (localTags.equals("<defaultDataQuery>")) {
-      } else if (localTags.equals("</defaultDataQuery>")) tDefaultDataQuery = content;
-      else if (localTags.equals("<defaultGraphQuery>")) {
-      } else if (localTags.equals("</defaultGraphQuery>")) tDefaultGraphQuery = content;
-      else if (localTags.equals("<nThreads>")) {
-      } else if (localTags.equals("</nThreads>")) tnThreads = String2.parseInt(content);
-      else if (localTags.equals("<dimensionValuesInMemory>")) {
-      } else if (localTags.equals("</dimensionValuesInMemory>"))
-        tDimensionValuesInMemory = String2.parseBoolean(content);
-      else xmlReader.unexpectedTagException();
+      switch (localTags) {
+        case "<addAttributes>" -> tGlobalAttributes = getAttributesFromXml(xmlReader);
+        case "<altitudeMetersPerSourceUnit>" ->
+            throw new SimpleException(EDVAlt.stopUsingAltitudeMetersPerSourceUnit);
+        case "<axisVariable>" -> tAxisVariables.add(getSDAVVariableFromXml(xmlReader));
+        case "<dataVariable>" -> tDataVariables.add(getSDADVariableFromXml(xmlReader));
+        case "<accessibleTo>",
+            "<dimensionValuesInMemory>",
+            "<nThreads>",
+            "<defaultGraphQuery>",
+            "<defaultDataQuery>",
+            "<iso19115File>",
+            "<fgdcFile>",
+            "<onChange>",
+            "<sourceUrl>",
+            "<updateEveryNMillis>",
+            "<reloadEveryNMinutes>",
+            "<accessibleViaWMS>",
+            "<graphsAccessibleTo>" -> {}
+        case "</accessibleTo>" -> tAccessibleTo = content;
+        case "</graphsAccessibleTo>" -> tGraphsAccessibleTo = content;
+        case "</accessibleViaWMS>" -> tAccessibleViaWMS = String2.parseBoolean(content);
+        case "</reloadEveryNMinutes>" -> tReloadEveryNMinutes = String2.parseInt(content);
+        case "</updateEveryNMillis>" -> tUpdateEveryNMillis = String2.parseInt(content);
+        case "</sourceUrl>" -> tLocalSourceUrl = content;
+        case "</onChange>" -> tOnChange.add(content);
+        case "</fgdcFile>" -> tFgdcFile = content;
+        case "</iso19115File>" -> tIso19115File = content;
+        case "</defaultDataQuery>" -> tDefaultDataQuery = content;
+        case "</defaultGraphQuery>" -> tDefaultGraphQuery = content;
+        case "</nThreads>" -> tnThreads = String2.parseInt(content);
+        case "</dimensionValuesInMemory>" ->
+            tDimensionValuesInMemory = String2.parseBoolean(content);
+        default -> xmlReader.unexpectedTagException();
+      }
     }
     int nav = tAxisVariables.size();
     Object ttAxisVariables[][] = nav == 0 ? null : new Object[nav][];
@@ -551,10 +548,10 @@ public class EDDGridFromDap extends EDDGrid {
         quickRestartAttributes.set("creationTimeMillis", "" + creationTimeMillis);
         quickRestartAttributes.set("dasBytes", new ByteArray(dasBytes));
         quickRestartAttributes.set("ddsBytes", new ByteArray(ddsBytes));
-        for (int av = 0; av < axisVariables.length; av++) {
+        for (EDVGridAxis axisVariable : axisVariables) {
           quickRestartAttributes.set(
-              "sourceValues_" + String2.encodeVariableNameSafe(axisVariables[av].sourceName()),
-              axisVariables[av].sourceValues());
+              "sourceValues_" + String2.encodeVariableNameSafe(axisVariable.sourceName()),
+              axisVariable.sourceValues());
         }
         File2.makeDirectory(File2.getDirectory(quickRestartFullFileName()));
         NcHelper.writeAttributesToNc3(quickRestartFullFileName(), quickRestartAttributes);
@@ -567,7 +564,7 @@ public class EDDGridFromDap extends EDDGrid {
     long cTime = System.currentTimeMillis() - constructionStartMillis;
     if (verbose)
       String2.log(
-          (debugMode ? "\n" + toString() : "")
+          (debugMode ? "\n" + this : "")
               + "\n*** EDDGridFromDap "
               + datasetID
               + " constructor finished. TIME="
@@ -1001,7 +998,7 @@ public class EDDGridFromDap extends EDDGrid {
                 EDStatic.simpleBilingual(language, EDStatic.waitThenTryAgainAr)
                     + "\n("
                     + EDStatic.errorFromDataSource
-                    + t.toString()
+                    + t
                     + ")",
                 t);
       }
@@ -1027,9 +1024,7 @@ public class EDDGridFromDap extends EDDGrid {
         // it's a DGrid;  test the axes
         if (dv == 0) {
           // GridDataAccessor compares observed and expected axis values
-          for (int av = 0; av < axisVariables.length; av++) {
-            results[av] = pa[av + 1];
-          }
+          System.arraycopy(pa, 1, results, 0, axisVariables.length);
         } else if (pa.length != 1) {
           for (int av = 0; av < axisVariables.length; av++) {
             String tError = results[av].almostEqual(pa[av + 1]);
@@ -1174,7 +1169,7 @@ public class EDDGridFromDap extends EDDGrid {
 
     // read through the variables[]
     HashSet<String> dimensionNameCsvsFound = new HashSet<>();
-    Enumeration vars = dds.getVariables();
+    Iterator<BaseType> vars = dds.getVariables();
     StringArray varNames = new StringArray();
     StringBuilder results = new StringBuilder();
     // if dimensionName!=null, this notes if a var with another dimension combo was found
@@ -1182,8 +1177,8 @@ public class EDDGridFromDap extends EDDGrid {
     String sourceDimensionNamesInBrackets = null;
     Attributes gridMappingAtts = null;
     NEXT_VAR:
-    while (vars.hasMoreElements()) {
-      BaseType bt = (BaseType) vars.nextElement();
+    while (vars.hasNext()) {
+      BaseType bt = vars.next();
       String dName = bt.getName();
       varNames.add(dName);
 
@@ -1200,8 +1195,7 @@ public class EDDGridFromDap extends EDDGrid {
       // ensure it is a DGrid or DArray
       DArray mainDArray;
       if (bt instanceof DGrid dgrid)
-        mainDArray =
-            (DArray) dgrid.getVariables().nextElement(); // first element is always main array
+        mainDArray = (DArray) dgrid.getVariables().next(); // first element is always main array
       else if (bt instanceof DArray darray) mainDArray = darray;
       else continue;
 
@@ -1493,7 +1487,7 @@ public class EDDGridFromDap extends EDDGrid {
                 + "?"
                 + tSourceName
                 + "\n"
-                + sb.toString());
+                + sb);
 
       // ensure no missing values or values > 1e20
       double stats[] = axisPAs[av].calculateStats();
@@ -1699,7 +1693,10 @@ public class EDDGridFromDap extends EDDGrid {
         writeVariablesForDatasetsXml(axisSourceTable, axisAddTable, "axisVariable", false, false));
     results.append(
         writeVariablesForDatasetsXml(dataSourceTable, dataAddTable, "dataVariable", false, false));
-    results.append("</dataset>\n" + "\n");
+    results.append("""
+            </dataset>
+
+            """);
 
     String2.log("\n\n*** generateDatasetsXml finished successfully.\n\n");
     return results.toString();
@@ -1862,8 +1859,7 @@ public class EDDGridFromDap extends EDDGrid {
             + "\n"
             + String2.standardHelpAboutMessage());
 
-    Writer results = File2.getBufferedFileWriterUtf8(resultsFileName);
-    try {
+    try (Writer results = File2.getBufferedFileWriterUtf8(resultsFileName)) {
       // crawl THREDDS catalog
       crawlThreddsCatalog(
           oLocalSourceUrl == null
@@ -1873,8 +1869,6 @@ public class EDDGridFromDap extends EDDGrid {
           pathRegex,
           negativePathRegex,
           results);
-    } finally {
-      results.close();
     }
 
     String2.returnLoggingToSystemOut();
@@ -2347,12 +2341,13 @@ public class EDDGridFromDap extends EDDGrid {
     // process the catalog's datasets
     // ???getDatasets or getDatasetsLogical()?
     List<Dataset> datasets = catalog.getDatasets(); // getDatasetsLogical();
-    HashSet<String> set = new HashSet();
+    HashSet<String> set = new HashSet<>();
     if (datasets != null) {
       if (verbose) String2.log("crawlThreddsCatalog will process " + datasets.size() + " datasets");
-      for (int i = 0; i < datasets.size(); i++) // usually just 1
-      processThreddsDataset(
-            datasets.get(i),
+      // usually just 1
+      for (Dataset dataset : datasets)
+        processThreddsDataset(
+            dataset,
             set,
             datasetNameRegex,
             pathRegex,
@@ -2486,8 +2481,8 @@ public class EDDGridFromDap extends EDDGrid {
             if (list != null && list.size() > 0) {
               StringBuilder names = new StringBuilder();
               StringBuilder roles = new StringBuilder();
-              for (int i = 0; i < list.size(); i++) {
-                Contributor contributor = (Contributor) list.get(i);
+              for (Object o : list) {
+                Contributor contributor = (Contributor) o;
                 String2.ifSomethingConcat(names, ", ", contributor.getName());
                 String2.ifSomethingConcat(roles, ", ", contributor.getRole());
               }
@@ -2497,7 +2492,7 @@ public class EDDGridFromDap extends EDDGrid {
 
             list = dataset.getCreators();
             if (list != null && list.size() > 0) {
-              Source source = (Source) list.get(0);
+              Source source = (Source) list.getFirst();
               atts.add("creator_name", source.getName());
               atts.add("creator_email", source.getEmail());
               atts.add("creator_url", source.getUrl());
@@ -2505,8 +2500,8 @@ public class EDDGridFromDap extends EDDGrid {
 
             list = dataset.getDocumentation();
             if (list != null) {
-              for (int i = 0; i < list.size(); i++) {
-                Documentation id = (Documentation) list.get(i);
+              for (Object o : list) {
+                Documentation id = (Documentation) o;
                 // String2.log(">> Doc#" + i + ": type:" + id.getType());
                 // String2.log(">> Doc#" + i + ": inlineContent:" + id.getInlineContent());
                 // String2.log(">> Doc#" + i + ": URI:" + id.getURI());
@@ -2520,13 +2515,13 @@ public class EDDGridFromDap extends EDDGrid {
                 String tType = id.getType();
                 if (!String2.isSomething(tType)) continue;
                 String tContent = id.getInlineContent();
-                if (tType.toLowerCase().equals("funding")
+                if (tType.equalsIgnoreCase("funding")
                     && !String2.looselyContains(tAck.toString(), tContent))
                   String2.ifSomethingConcat(tAck, " ", tContent);
-                if (tType.toLowerCase().equals("rights")
+                if (tType.equalsIgnoreCase("rights")
                     && !String2.looselyContains(tLicense.toString(), tContent))
                   String2.ifSomethingConcat(tLicense, " ", tContent);
-                if (tType.toLowerCase().equals("summary")
+                if (tType.equalsIgnoreCase("summary")
                     && !String2.looselyContains(tSummary.toString(), tContent))
                   String2.ifSomethingConcat(tSummary, " ", tContent);
               }
@@ -2534,24 +2529,26 @@ public class EDDGridFromDap extends EDDGrid {
 
             // String2.pressEnterToContinue(">> title=" + title.toString() + " name=" +
             // dataset.getName());
-            String fullName = dataset.getName();
-            if (fullName == null) fullName = "";
+            StringBuilder fullName = new StringBuilder(dataset.getName());
+            if (fullName == null) fullName = new StringBuilder();
             Dataset tParentDataset = dataset.getParentDataset();
             while (tParentDataset != null) {
               String tpName = tParentDataset.getName();
-              if (String2.isSomething(tpName)) fullName = tpName + ", " + fullName;
+              if (String2.isSomething(tpName)) fullName.insert(0, tpName + ", ");
               tParentDataset = tParentDataset.getParentDataset();
             }
             String2.ifSomethingConcat(
-                title, "",
-                fullName); // 2020-01-17 in netcdfjava 4.6, there was dataset.getFullName()
+                title,
+                "",
+                fullName
+                    .toString()); // 2020-01-17 in netcdfjava 4.6, there was dataset.getFullName()
             String2.ifSomethingConcat(history, "\n", dataset.getHistory());
 
             list = dataset.getKeywords();
             if (list != null) {
               StringBuilder sb = new StringBuilder();
-              for (int i = 0; i < list.size(); i++) {
-                Vocab v = (Vocab) list.get(i);
+              for (Object o : list) {
+                Vocab v = (Vocab) o;
                 // if (i == 0) String2.listMethods(v);
                 sb.append(v.getText() + ", ");
               }
@@ -2571,7 +2568,7 @@ public class EDDGridFromDap extends EDDGrid {
 
             list = dataset.getPublishers();
             if (list != null && list.size() > 0) {
-              Source source = (Source) list.get(0);
+              Source source = (Source) list.getFirst();
               atts.add("publisher_name", source.getName());
               atts.add("publisher_email", source.getEmail());
               atts.add("publisher_url", source.getUrl());
@@ -2626,9 +2623,9 @@ public class EDDGridFromDap extends EDDGrid {
       List<Dataset> datasets = dataset.getDatasetsLogical();
       if (datasets != null) {
         if (reallyVerbose) String2.log("  processing " + datasets.size() + " nested datasets...");
-        for (int i = 0; i < datasets.size(); i++) {
+        for (Dataset value : datasets) {
           processThreddsDataset(
-              datasets.get(i),
+              value,
               set,
               datasetNameRegex,
               pathRegex,
